# Ayoai-ARC-AGI-3-Integration

./: .gitignore  ARC-AGI-3-COLD-START-FINDINGS.md  ARC-HILLCLIMB-STEP1-SIGNAL-CHARACTERIZATION.md  ARC-HILLCLIMB-STEP2-VALUE-STORE-DESIGN.md  ARC-THIN-BORDER-MOCK-BASELINE.md  CLAUDE.md  README.md  ayoai_client.py  ayoai_streaming_client.py  main.py  pyproject.toml  pytest.ini  random_streaming_adapter.py  recorder.py  structs.py
.claude/: settings.local.json
adapters/: __init__.py  arc.py  base.py  episode.py  football.py  live_arc_transport.py  provision.py  roblox.py  transport_executor.py  vinheim.py
analysis/: adapter_arms_focused_g315372.json  adapter_arms_sweep_g315370.json  adapter_r11l_pool_trace_g315378.json  adapter_r11l_pool_trace_g315378.py  aevs_2x2_runner.py  aevs_efficiency_metrics.py  arc_step1_signal_analysis.py  bank_timing_probe_g315373.py  cc_assembly_reachability_probe.py  cc_assembly_replay_probe.py  churn_history_depth_g315129.py  click_prior_sweep_g315368.json  click_prior_sweep_g315368.py  click_prior_validation_g315367.json  click_prior_validation_g315367.py  coverage_stall_probe.py  cursor_trace_g315171.py  cursor_trace_g315219.py  dead_signature_substrate_probe_g315364.json  dead_signature_substrate_probe_g315364.py  dock_replay_g315227.py  fcx_effects_probe_g315377.json  fcx_effects_probe_g315377.py  fcx_sp80_trace_g315376.json  fcx_sp80_trace_g315376.py  g315303_aevs_trend_analysis.py  g315303_aevs_trend_preregistration.md  g315303_aevs_trend_results.json  g315303_aevs_trend_results.md  g315380_aevs_trend_run2_results.json  g315380_aevs_trend_run2_results.md  g315381_aevs_trend_run3_results.json  g315381_aevs_trend_run3_results.md  g315382_pause_correlation.py  g315382_tick129_forensics.py  g315382_tick129_forensics_partA.json  g315382_tick129_forensics_results.md  g315382_walk_fire_off.json  g315382_walk_fire_on.json  g315382_walk_fire_replay.py  (+57 more)
analysis/tests/: test_ls20_exploration.py  test_predicate_compiler.py  test_trajectory_summarizer.py  test_win_condition_cegis.py  test_win_condition_extractor.py  test_win_condition_heuristic.py  test_win_condition_llm.py  test_win_condition_zero_positive.py
design/: adapter-cognitive-load-breakdown.md  arc-task-action-boundary.md  integration-design.md  solver-v0.md  v2-llm-episode-seed.md  v2-state-graph-explorer.md  v3-llm-refiner-arm.md  v4-goal-predicate-win-bridge.md  v4-synthesized-world-model.md  win-condition-discovery.md  win-condition-increment-V-impl.md  win-condition-zero-positive-objective.md
primitives/: __init__.py  action_effect_value_store.py  ascii_render.py  cluster_commitment.py  corridor_penalty.py  directed_move.py  frontier_coverage.py  frontier_graph_explorer.py  learned_displacement.py  model_planner.py  ontology_uncertainty.py  reachability_nav.py  reward_state_recognizer.py  sticky_latch.py  synthesized_world_model.py  v4_arm.py  world_model_synthesizer.py
solver_v0/: __init__.py  client_adapter.py  perception.py  policy.py  signatures.py  streaming_adapter.py
solver_v2/: __init__.py  action6_explore.py  bt_executor.py  bt_streaming_adapter.py  calibration.py  cc_assembly.py  cc_segment.py  click_prior.py  dock_classifier.py  episode.py  executor.py  frontier_explorer.py  refiner.py  seed_provider.py  state_graph.py  streaming_adapter.py  toggle_probe.py
tests/: conftest.py  test_fixture_in_sync.py  test_greedy_policy_cross_language.py
tests/fixtures/: __init__.py  arc-action-translator-fixture.json  generate_synthetic_ls20.py  ls20-synthetic.recording.jsonl  mock_ayoai_server.py
tests/integration/: __init__.py  test_bt_executor_mock_game.py  test_click_prior_adapter_path.py  test_crossenv_render.py  test_solver_v0_mock_game.py  test_solver_v0_pipeline.py  test_solver_v2_mock_game.py  test_solver_v2_seed_wiring.py
tests/perf/: bench_perception_history_sweep.py  test_solver_v0_envelope.py  test_solver_v2_envelope.py
tests/unit/: test_action_effect_value_store.py  test_aevs_efficiency_metrics.py  test_arc_adapter.py  test_ascii_render.py  test_ayoai_client.py  test_ayoai_streaming_client.py  test_bt_executor.py  test_cc_assembly.py  test_cc_segment.py  test_cluster_commitment.py  test_config_priors.py  test_core.py  (+46 more)
