[project]
name = "ayoai-arc-agi-3-integration"
version = "0.1.0"
description = "Ayoai ARC-AGI-3 Integration - AI agent framework for abstract reasoning challenges"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
]

[project.optional-dependencies]
# LLM semantic-prior arm (analysis/win_condition_llm.py, Increment IV). OPTIONAL
# by design: LLMHypothesizer degrades gracefully (client injection + safe-default
# fallback) when anthropic is absent, so this is NOT a hard dependency. Install
# with `pip install -e ".[llm]"` to enable the live LLM path; the arm reads
# ANTHROPIC_API_KEY from the environment via the anthropic SDK.
llm = [
    "anthropic>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "requests-mock>=1.12.1",
    "ruff>=0.11.4",
    "types-requests>=2.33.0.20260518",
]

[tool.mypy]
strict = true
disallow_untyped_defs = true
# explicit_package_bases + namespace_packages make `mypy .` resolve modules
# from the repo root deterministically. Without them, analysis/ (which has no
# __init__.py) is found twice — once as top-level `aevs_efficiency_metrics`
# and once as `analysis.aevs_efficiency_metrics` — and mypy aborts before
# checking. The code imports it as `analysis.aevs_efficiency_metrics`, so the
# repo-root base is correct. (g-315-289)
explicit_package_bases = true
namespace_packages = true
exclude = [
    "tests",
    # analysis/ holds one-off investigation probe scripts (named after closed
    # goal-ids — e.g. cursor_trace_g315171, why_score_zero_g315132c,
    # target_signal_g315132a — plus *_probe diagnostics). They are throwaway
    # analysis runs, NOT production code, and imported by NOTHING on the
    # production path (verified g-315-296: zero `from analysis`/`import analysis`
    # outside tests/ + analysis/ itself; the one production-adjacent helper the
    # config note above mentions, aevs_efficiency_metrics, is clean either way).
    # Excluding them keeps strict focused on production solver/integration code
    # instead of taxing every future diagnostic probe. (g-315-296)
    "analysis",
]
plugins = []

[tool.ruff.lint]
extend-select = ["I"]
